// Copyright 2022 Monoskope Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

import "google/protobuf/empty.proto";
import "api/eventsourcing/messages.proto";

option go_package = "github.com/finleap-connect/monoskope/pkg/api/eventsourcing";

package eventsourcing;

// API of the Monoskope EventStore.
service EventStore {
  // Store streams events to the store.
  rpc Store(stream Event) returns (google.protobuf.Empty);
  // Retrieve returns a stream of Events.
  rpc Retrieve(EventFilter) returns (stream Event);
  // RetrieveOr returns a stream of Events by concatenating the filters with the logical or
  rpc RetrieveOr(EventFilters) returns (stream Event);
}
